# agent-threat-rules

./: .gitignore  .vercelignore  ADOPTERS.md  ANNOUNCEMENT-TSC-FORMATION.draft.md  ATR-FRAMEWORK-SPEC.md  ATR-SPEC-v1.md  BRAND.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  HANDOFF-2026-05-08.md  INTEGRATION.md  README.md  SPEC.md  STANDARDIZATION-STATUS.md  SUPPORT.md  TRADEMARK.md  TSC-CHARTER.md  TSC-ONBOARDING.md  package-lock.json  package.json  pyproject.toml  stats.json
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  integration-request.yml  red-team-probe.yml
.github/PULL_REQUEST_TEMPLATE/: adopter.md
.github/workflows/: crystallize.yml  cve-daily-sync.yml  daily-scan.yml  deploy-website.yml  (+11 more)
.vercel/: project.json
certification/: program-guide.md
data/: daily-summary.md  ecosystem-report.csv  ecosystem-stats.json  eval-report.json  stats.json
disclosures/: README.md  TEMPLATE.md
docs/: BDFL-charter.md  DOWNSTREAM-SYNC-CONTRACT.md  FIVE-EYES-MAPPING.md  FIVE_EYES_MAPPING.md  OWASP-AGENTIC-MAPPING.md  QUALITY-GATE.md  owasp-agentic-mapping.json  quick-start.md  schema-spec.md  semantic-judge.md  telemetry-spec.md
engines/: README.md
governance/: CHARTER.md  STANDARD-THREAT-MODEL.md  oasis-proposal-2026-05-26.md
legal/: CLA.md  jurisdiction-notes.md  trademark-policy.md
meetings/: AGENDA-TEMPLATE.md  DECISIONS.md  README.md  TEMPLATE.md
python/: README.md  pyproject.toml
python/inspect_evals/: README.md  inspect_task.py
scripts/: aggregate-telemetry.ts  apply-nist-mapping.ts  atr_recall_analysis.ts  auto-regex.ts  build-benign-corpus.ts  check-new-rules-on-benign.ts  check-rules-safety.ts  compile-yara.ts  cve-collect.ts  eval-academic-raw.ts  eval-garak-inthewild.ts  eval-small-corpora.ts  eval-std-corpora.ts  expand-nist-mapping.ts  export-sage.ts  generate-detection-from-poc.ts  generate-owasp-mapping.ts  hackaprompt-to-corpus.py  issue-to-proposal.ts  maturity-promote.ts  next-rule-id.ts  probe-to-atr.ts  promote-detection-ready.ts  push-to-threat-cloud.ts  run-garak-full-benchmark.ts  sync-advbench.ts  sync-avid-db.ts  sync-cisa-kev.ts  sync-ghsa.ts  sync-huntr.ts  sync-nvd-ai.ts  sync-pliny.ts  sync-stats-from-measurements.ts  sync-stats.ts  validate-schema-quick.mjs
sovereign/: README.md
spec/: README.md  atr-correlation-v1.0.md  atr-event-v1.0.md  atr-language-detection-v1.0.md  atr-method-v1.1.md  atr-profile-v1.0.md  atr-schema.yaml
src/: action-executor.ts  cli.ts  engine.ts  index.ts  mcp-server.ts  redact.ts  rule-scaffolder.ts  semantic-evaluator.ts  trace-evaluator.ts  types.ts
tests/: action-executor.test.ts  compile-yara.test.ts  engine.test.ts  multilingual-dispatch.test.ts  openai-compatible-judge.test.ts  redact.test.ts  rule-scaffolder-semantic.test.ts  sage-converter.test.ts  semantic-evaluator.test.ts  semantic-judge-config.test.ts  semantic-ollama.integration.test.ts  trace-evaluator.test.ts  validate-rules.ts
website/: .vercelignore  ARCHITECTURE-v2-DAY-61-DRAFT.md  MORNING-BRIEF.md  STANDARDS-CONFORMANCE-PLAN.md
(+2412 files in other folders)
