[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyatr"
version = "0.2.5"
description = "Python engine for Agent Threat Rules (ATR) -- the open detection standard for AI agents (like Sigma, but for prompt injection, tool poisoning, and MCP attacks). 311 rules, Cisco AI Defense shipped, 97.1% garak recall."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "ATR Community"},
]
keywords = ["atr", "agent-security", "threat-rules", "prompt-injection", "llm-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Agent-Threat-Rule/agent-threat-rules"
Repository = "https://github.com/Agent-Threat-Rule/agent-threat-rules"
Documentation = "https://github.com/Agent-Threat-Rule/agent-threat-rules/tree/main/python"
Issues = "https://github.com/Agent-Threat-Rule/agent-threat-rules/issues"

[project.scripts]
pyatr = "pyatr.cli:main"

[tool.setuptools.packages.find]
include = ["pyatr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
